--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.4.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "framer-motion": "^10.12.16",
     "next": "13.4.4",
     "next-cloudinary": "^4.12.0",
     "query-string": "^8.1.0",
@@ -24,7 +25,9 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
     "react-select": "^5.7.3",
+    "sass": "^1.62.1",
     "typescript": "5.0.4",
+    "typewriter-effect": "^2.19.0",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
