--- a/.env
+++ b/.env
@@ -3,11 +3,9 @@
 
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
-DATABASE_URL="mongodb+srv://airbnb:122711@airbnb.k6ura15.mongodb.net/test"
 NEXTAUTH_SECRET="NEXTAUTH_SECRET"
-GITHUB_ID=b09a41c5b39142d479fd
-GITHUB_SECRET=9765dd1b7479044b744f377f3a1708a826d18e3b
-GOOGLE_ID=981027482005-qdq4dsv8mng3tkv92f551e9f3ri2icus.apps.googleusercontent.com
-GOOGLE_SECRET=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
+DATABASE_URL="mongodb+srv://nguyenphatdat3004:122711@6live.suhiwub.mongodb.net/test"
+
+GOOGLE_ID=362050295192-v9dba0b6qe3h8pqdpjuhtcd2690r3f92.apps.googleusercontent.com
+GOOGLE_SECRET=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
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dngl8ihk7
