--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.0",
+    "@next/font": "^13.4.4",
+    "@prisma/client": "^4.15.0",
     "@types/node": "20.2.4",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "axios": "^1.4.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "firebase": "^9.22.1",
     "framer-motion": "^10.12.16",
     "next": "13.4.4",
     "next-cloudinary": "^4.12.0",
@@ -36,6 +40,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "postcss": "^8.4.23",
     "prettier": "^2.8.8",
+    "prisma": "^4.15.0",
     "tailwindcss": "^3.3.2"
   }
 }
