--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "firebase": "^9.22.1",
@@ -25,17 +26,21 @@
     "prisma": "^4.15.0",
     "query-string": "^8.1.0",
     "react": "18.2.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
+    "react-number-format": "^5.2.2",
     "react-select": "^5.7.3",
+    "react-spinners": "^0.13.8",
     "sass": "^1.62.1",
     "typescript": "5.0.4",
     "typewriter-effect": "^2.19.0",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
+    "@types/react-date-range": "^1.4.4",
     "autoprefixer": "^10.4.14",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
