--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "framer-motion": "^10.12.16",
     "next": "13.4.4",
     "next-cloudinary": "^4.12.0",
+    "numbro": "^2.3.6",
     "prisma": "^4.15.0",
     "query-string": "^8.1.0",
     "react": "18.2.0",
