--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/prisma-adapter": "^1.0.0",
     "@next/font": "^13.4.4",
     "@prisma/client": "^4.15.0",
+    "@svgr/webpack": "^8.0.1",
     "@types/node": "20.2.4",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
@@ -20,6 +21,8 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "firebase": "^9.22.1",
+    "flowbite": "^1.6.5",
+    "flowbite-react": "^0.4.7",
     "framer-motion": "^10.12.16",
     "next": "13.4.4",
     "next-cloudinary": "^4.12.0",
