filter, send email, beautify profile

--- a/.env
+++ b/.env
@@ -9,3 +9,6 @@ DATABASE_URL="mongodb+srv://nguyenphatdat3004:122711@6live.suhiwub.mongodb.net/t
 GOOGLE_ID=362050295192-v9dba0b6qe3h8pqdpjuhtcd2690r3f92.apps.googleusercontent.com
 GOOGLE_SECRET=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
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dngl8ihk7
+EMAIL_APP_PASSWORD=pehuwosxgakhnmpr
+EMAIL_APP=nguyenphatdat3004@gmail.com
+NEXT_PUBLIC_FIREBASE_API=AIzaSyBmSEtcFN_p6w7J8n9etpIAEnSnxjl1E38
