--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "18.2.4",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.1.4",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "firebase": "^9.22.1",
@@ -26,6 +27,7 @@
     "framer-motion": "^10.12.16",
     "next": "13.4.4",
     "next-cloudinary": "^4.12.0",
+    "nodemailer": "^6.9.3",
     "numbro": "^2.3.6",
     "prisma": "^4.15.0",
     "query-string": "^8.1.0",
@@ -44,6 +46,7 @@
     "zustand": "^4.3.8"
   },
   "devDependencies": {
+    "@types/nodemailer": "^6.4.8",
     "@types/react-date-range": "^1.4.4",
     "autoprefixer": "^10.4.14",
     "eslint-config-prettier": "^8.8.0",
