--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.7",
     "framer-motion": "^10.12.16",
+    "html-react-parser": "^4.0.0",
     "next": "13.4.4",
     "next-cloudinary": "^4.12.0",
     "nodemailer": "^6.9.3",
@@ -38,6 +39,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
     "react-number-format": "^5.2.2",
+    "react-quill": "^2.0.0",
     "react-select": "^5.7.3",
     "react-spinners": "^0.13.8",
     "sass": "^1.62.1",
