--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "axios": "^1.4.0",
+    "bcryptjs": "^2.4.3",
     "date-fns": "^2.30.0",
     "dotenv": "^16.1.4",
     "eslint": "8.41.0",
@@ -48,6 +49,7 @@
     "zustand": "^4.3.8"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/nodemailer": "^6.4.8",
     "@types/react-date-range": "^1.4.4",
     "autoprefixer": "^10.4.14",
