add responsive 3. add ssg for list page

--- a/.env
+++ b/.env
@@ -12,3 +12,4 @@ NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dngl8ihk7
 EMAIL_APP_PASSWORD=pehuwosxgakhnmpr
 EMAIL_APP=nguyenphatdat3004@gmail.com
 NEXT_PUBLIC_FIREBASE_API=AIzaSyBmSEtcFN_p6w7J8n9etpIAEnSnxjl1E38
+API=https://exe-6live.vercel.app/
